# translator

./: .gitignore  Cargo.toml  README.md
.github/workflows/: av.yml  build.yml
app/: Cargo.toml  package-lock.json  package.json  svelte.config.js  tailwind.config.ts
app/src/: app.html
app/src-tauri/: tauri.conf.json
app/src/routes/: +layout.svelte  +page.svelte  decode.svelte  encode.svelte  settings.svelte
cli/: Cargo.toml
lib/: Cargo.toml
lib/src/: flag.rs  lib.rs  utils.rs
lib/src/flags/: mod.rs  transgender.rs
